--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: ci/cd workflow
+name: Laravel
 
 on:
   push:
@@ -6,14 +6,17 @@ on:
   pull_request:
     branches: [ master ]
 
-laravel-tests:
-  runs-on: ubuntu-latest
-  steps:
+jobs:
+  laravel-tests:
+
+    runs-on: ubuntu-latest
+
+    steps:
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -22,23 +25,15 @@ laravel-tests:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Compile assets
+      run: |
+        npm install
+        npm run production
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+        CACHE_DRIVER: array
+        SESSION_DRIVER: array
+        QUEUE_DRIVER: sync
       run: vendor/bin/phpunit
-
-build:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup Node.js
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: '12'
-        check-latest: true
-    - name: Install NPM dependencies
-      run: npm install
-    - name: Compile assets for production
-      run: npm run production
