--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Remove composer.lock
+      run: rm composer.lock
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
     - name: Generate key
