--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup PHP
@@ -31,8 +29,7 @@ jobs:
         touch database/database.sqlite
     - name: Compile assets
       run: |
-        npm install
-        npm run production
+        npm install && npm run production
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
@@ -40,4 +37,4 @@ jobs:
         CACHE_DRIVER: array
         SESSION_DRIVER: array
         QUEUE_DRIVER: sync
-      run: vendor/bin/phpunit
+      run: php artisan test
