--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "genealabs/laravel-model-caching": "^0.11.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "aodamuz/format": "^1.1",
@@ -23,6 +24,7 @@
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.0",
+        "laravel/dusk": "^6.12",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
