--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,6 +17,8 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
+    - name: Install Dusk
+      run: php artisan dusk:install
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -33,3 +35,5 @@ jobs:
         SESSION_DRIVER: array
         QUEUE_DRIVER: sync
       run: php artisan test
+    - name: Execute tests via Laravel Dusk
+      run: php artisan dusk
