--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.21",
         "postcss-import": "^12.0.1",
+        "quill": "^1.3.7",
         "tailwindcss": "^2.0.2",
         "tailwindcss-multi-theme": "^1.0.4"
     }
