--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
         "quill": "^1.3.7",
         "tailwindcss": "^2.0.2",
         "tailwindcss-multi-theme": "^1.0.4"
-    }
+    },
+    "dependencies": {}
 }
