--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/custom-forms": "^0.2.1",
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
-        "color": "^3.1.3",
+        "highlight.js": "^10.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.21",
         "postcss-import": "^12.0.1",
         "quill": "^1.3.7",
-        "tailwindcss": "^2.0.2",
-        "tailwindcss-multi-theme": "^1.0.4"
-    },
-    "dependencies": {}
+        "tailwind-css-variables": "^2.0.3",
+        "tailwindcss": "^2.0.3"
+    }
 }
