--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,7 +36,10 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+        BCRYPT_ROUNDS: 4
         CACHE_DRIVER: array
+        MAIL_MAILER: array
+        QUEUE_CONNECTION: sync
         SESSION_DRIVER: array
-        QUEUE_DRIVER: sync
+        TELESCOPE_ENABLED: false
       run: php artisan test --parallel
