--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -44,16 +44,27 @@ jobs:
           php -r "file_exists('.env') || copy('.env.example', '.env');"
           php artisan key:generate
 
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+
       - name: Clear Config
         run: php artisan config:clear
 
+      - name: Clear Views
+        run: php artisan view:clear
+
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+
       - name: Test with phpunit
         env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
           APP_ENV: testing
           BCRYPT_ROUNDS: 4
           CACHE_DRIVER: array
-          DB_CONNECTION: sqlite
-          DB_DATABASE: :memory:
           MAIL_MAILER: array
           QUEUE_CONNECTION: sync
           SESSION_DRIVER: array
