--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,12 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup PHP, with composer and extensions
+      - name: Setup PHP with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, dom, fileinfo
-          coverage: xdebug #optional
 
       - name: Get composer cache directory
         id: composer-cache
