--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,11 +1,12 @@
-# GitHub Action for Laravel
-name: Testing Laravel
+name: Laravel
 
-on: [push, pull_request]
+on:
+  push:
+    branches: master
 
 jobs:
   laravel:
-    name: Laravel (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
+    name: Laravel PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }}
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
@@ -35,33 +36,27 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-      - name: Prepare the application
-        run: |
-          php -r "file_exists('.env') || copy('.env.example', '.env');"
-          php artisan key:generate
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
+
+      - name: Generate key
+        run: php artisan key:generate
 
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
-
-      - name: Clear Config
-        run: php artisan config:clear
-
-      - name: Clear Views
-        run: php artisan view:clear
 
       - name: Create Database
         run: |
           mkdir -p database
           touch database/database.sqlite
 
-      - name: Test with phpunit
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-          APP_ENV: testing
           BCRYPT_ROUNDS: 4
           CACHE_DRIVER: array
           MAIL_MAILER: array
