--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-latest]
-        php-versions: ['7.3']
+        operating-system: [ubuntu-latest, windows-latest, macos-latest]
+        php-versions: [7.3', '7.4', '8.0']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
