--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo
+          extensions: mbstring, dom, fileinfo, pdo, pdo_sqlite
 
       - name: Get composer cache directory
         id: composer-cache
