--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.12",
+        "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.5",
         "mledoze/countries": "^4.0",
         "predis/predis": "^1.1"
