--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,12 +1,10 @@
 name: Laravel
 
-on:
-  push:
-    branches: master
+on: [push]
 
 jobs:
   laravel:
-    name: Laravel PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }}
+    name: Testing Laravel with PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }}
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
