Quitando el limpiador de logs
Se ha quitado el limpiador de Logs cuando el entorno no es local.

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
+          APP_ENV: production
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
           BCRYPT_ROUNDS: 4
