--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,10 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
         "brianium/paratest": "^6.2",
+        "codeception/assert-throws": "^1.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "jasonmccreary/laravel-test-assertions": "^1.1",
         "laravel/breeze": "^1.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
